实时获取客户端模拟温度

--- a/src/main/webapp/WEB-INF/views/modules/param/param_demo.html
+++ b/src/main/webapp/WEB-INF/views/modules/param/param_demo.html
@@ -65,15 +65,15 @@
 			},
 			methods: {
 				getInfo: function(){
-					var a = Math.round(Math.random()*9+1);
-					$.getJSON("${request.contextPath}/partemp/info/"+a, function(r){
+					//var a = Math.round(Math.random()*9+1);
+					$.getJSON("${request.contextPath}/partemp/query", function(r){
 						vm.parTemp = r.parTemp;
 					});
 				},
 				useInfo: function() {
 			        setInterval(() => { 
 			            this.getInfo();
-			        }, 500)
+			        }, 2000)
 			        //setInterval(this.getInfo(), 500)
 			    }
 			},
