--- a/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
+++ b/src/main/webapp/WEB-INF/views/modules/mobile/group_type.html
@@ -21,17 +21,17 @@
 		<script src="${request.contextPath}/statics/plugins/treegrid/jquery.treegrid.extension.js"></script>
 		<script src="${request.contextPath}/statics/plugins/treegrid/tree.table.js"></script>
 	    
-	    
-	    
 		<style type="text/css">
-			.info-box-text {
-				white-space: normal !important;
+			.small-box{
+				margin-left: 5px !important;
+				margin-right: 5px !important;
+				font-size: 12px !important;
 			}
-			
-			.btn-app {
-				margin: 10px;
-				border:0px;
-				color:window;
+			.inner{
+				padding: 1px !important;
+			}
+			.small-box p{
+				margin:0 0 5px !important;
 			}
 		</style>
 	</head>
@@ -39,58 +39,83 @@
 	<body>
 	<div class="content-wrapper" id="rrapp" style="margin-left: 0px;">
 	<section class="content">
-	<div class="row" style="border: none">
-        <div class="col-md-12">
-           <div class="box box-widget widget-user-2">
-              
-            <div class="widget-user-header bg-aqua">
-            
-           <div class="widget-user-image">
-                <img class="img-circle" :src="user.headImgUrl">
-           </div>
-              <h3 class="widget-user-username">{{user.username}}</h3>
-              <h5 class="widget-user-desc">{{user.deptName}}</h5>
-            </div>
-            
-            <div class="box-footer">
-		<div class="row"  style="border: none;">
+		<div class="box box-info">
+		<div class="box-header with-border">
+              <!-- <h3 class="box-title">Horizontal Form</h3> -->
+              <div class="pull-left">
+                <button type="button" class="btn btn-box-tool" @click="goUrl"><i class="fa fa-chevron-left"></i></button>
+              </div>
+         </div>
+         
+	  <div class="box-body">   
+		<div class="row" style="border: none;">
         <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
           <div class="small-box bg-yellow">
             <div class="inner">
-              <h4>一号机组</h4>
-
-              <p>编号：1</p>
+              <h4>发电机</h4>
+              <p>功率：</p>
+              <p>电压：</p>
+              <p>电流：</p>
+              <p>功率因数：</p>
+              <p>有功功率：</p>
+              <p>无功功率：</p>
             </div>
-            <div class="icon">
-              <i class="fa fa-shopping-cart"></i>
-            </div>
-            <a href="#" class="small-box-footer"  @click="goUrl">
+            <a href="#" class="small-box-footer">
               	更多信息 <i class="fa fa-arrow-circle-right"></i>
             </a>
           </div>
         </div>
-        <!-- ./col -->
+        
         <div class="col-lg-3 col-xs-6">
-          <!-- small box -->
           <div class="small-box bg-green">
             <div class="inner">
-              <h4>二号机组</h4>
-
-              <p>编号：2</p>
+              <h4>水轮机</h4>
+              <p>转速：</p>
+              <p>开度：</p>
+              <p>摆度：</p>
+              <p>振动：</p>
+              <p>推力轴瓦温度：</p>
+	          <p>上导温度：</p>
+	          <p>下导温度：</p>
             </div>
-            <div class="icon">
-              <i class="ion ion-stats-bars"></i>
-            </div>
-            <a href="#" class="small-box-footer" @click="goUrl">
+            <a href="#" class="small-box-footer">
               	更多信息 <i class="fa fa-arrow-circle-right"></i>
             </a>
           </div>
         </div>
-      </div>
+        
+        <div class="col-lg-3 col-xs-6">
+          <div class="small-box bg-aqua">
+            <div class="inner">
+              <h4>并网参数</h4>
+              <p>功率：</p>
+              <p>电压：</p>
+              <p>电流：</p>
+              <p>功率因数：</p>
+              <p>有功功率：</p>
+              <p>无功功率：</p>
             </div>
+            <a href="#" class="small-box-footer">
+              	更多信息 <i class="fa fa-arrow-circle-right"></i>
+            </a>
           </div>
         </div>
+        
+        <div class="col-lg-3 col-xs-6">
+          <div class="small-box bg-purple">
+            <div class="inner">
+              <h4>水位</h4>
+              <p>水位高度：</p>
+            </div>
+            <a href="#" class="small-box-footer">
+              	更多信息 <i class="fa fa-arrow-circle-right"></i>
+            </a>
+          </div>
+        </div>
+        
+      </div>
+      </div>
+      
       </div>
       </section>
       </div>
@@ -116,13 +141,10 @@
 					});
 				},
 				goUrl:function(){
-					parent.location.href ='group_type.html';
+					parent.location.href ='home.html';
 				},
 				toMyInfo: function(){
 					window.location.href = "${request.contextPath}/baspatient/toMyInfo";
-		        },
-		        toMyMemberList: function(){
-		        	window.location.href = "${request.contextPath}/baspatmember/toMyMemberList";
 		        }
 			},
 			created: function(){
