--- a/src/main/webapp/WEB-INF/views/modules/sys/dept.html
+++ b/src/main/webapp/WEB-INF/views/modules/sys/dept.html
@@ -53,9 +53,7 @@
 				<div class="col-sm-2 control-label">机构类型</div>
 				<div class="col-sm-10">
 					<select class="form-control" v-model="dept.deptType" >
-						<option>学校</option>
-						<option>社区</option>
-						<option>医院</option>
+						<option>水电站</option>
 					</select>
 				</div>
 			</div>
