--- a/src/main/webapp/WEB-INF/views/modules/mobile/home.html
+++ b/src/main/webapp/WEB-INF/views/modules/mobile/home.html
@@ -105,6 +105,7 @@
 				},
 				goUrl:function(){
 					parent.location.href ='group_type.html';
+					//window.location.href = "${request.contextPath}/staworkgroup/toGroupType?groupId="+groupId;
 				},
 				toMyInfo: function(){
 					window.location.href = "${request.contextPath}/baspatient/toMyInfo";
